--- a/requirements.txt
+++ b/requirements.txt
@@ -35,10 +35,10 @@ Mako==1.1.1
 MarkupSafe==1.1.1
 mccabe==0.6.1
 more-itertools==8.2.0
-numpy==1.18.1
+numpy
 packaging==20.3
 panda==0.3.1
-pandas==1.0.1
+pandas
 pathlib==1.0.1
 pluggy==0.13.1
 psycopg2==2.8.4
